<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Snakes &amp; Ladders</string>
    <string name="action_settings">Settings</string>
    <string name="developer_id">102357302</string>
    <string name="app_id">202351847</string>

    <!-- Menu Screen -->
    <string name="single_player_button_text">Play With Phone</string>
    <string name="multy_player_button_text">Play With a Friend</string>
    <string name="exit_button_text">Exit</string>

    <!-- Game Activity -->
    <string name="game_dash_board_player_one_name">Player 1</string>
    <string name="game_dash_board_player_two_name">Player 2</string>
    <string name="game_dash_board_single_player_one_name">Me</string>
    <string name="game_dash_board_multy_player_one_name">%1$s (Me)</string>
    <string name="game_dash_board_single_player_two_name">Phone</string>
    <string name="game_dash_board_sub_title_single_player">Single Player</string>
    <string name="game_dash_connect_button">Connect a device\nto play</string>

    <!-- Bluetooth -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_available">Bluetooth is not available</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled.\nLeaving %1$s</string>
    <string name="title_connecting">Connecting . . .</string>
    <string name="title_connected_to">Connected to %1$s</string>
    <string name="title_not_connected">Not connected</string>
    <string name="unable_to_connect">Unable to connect device, ask your partner to try</string>
    <string name="device_connection_lost">Device connection was lost</string>

    <!-- DeviceListActivity -->
    <string name="scanning">Scanning for devices . . .</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="button_scan_again">Scan again for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="new_game">New Game</string>

    <!-- Alert Dialog -->
    <string name="positive_btn">Yes</string>
    <string name="negative_btn">No</string>
    <string name="game_finish_win_title"><b>Congratulations!</b> \nYou won the game. . .</string>
    <string name="game_finish_lost_title"><b>Sorry!</b> \nYou lost the game . . .</string>
    <string name="game_finish_msg">Do you wish to play again ?</string>
    <string name="game_exit_title">Leaving current game.</string>
    <string name="game_exit_msg">Your current game will be lost.\nAre you sure, you want to exit ?</string>
    <string name="new_game_title">Start a new game.</string>
    <string name="new_game_msg">Your current game will be lost.\nAre you sure, you want to start a new game ?</string>

    <!-- Custom Toast -->
    <string name="found_a_ladder">Found a ladder</string>
    <string name="met_a_snake">Met a snake</string>
    <string name="dice_value">Dice value is %1$s</string>
    <string name="overlapped">Pieces are overlapped</string>

</resources>