<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/ui_img_logo_menu" />

    <Button
        android:id="@+id/singlePlayerButtoon"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ui_btn_menu"
        android:onClick="singlePlay"
        android:text="@string/single_player_button_text"
        android:textColor="@color/button_text"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/multyPlayerButtoon"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ui_btn_menu"
        android:onClick="multyPlay"
        android:text="@string/multy_player_button_text"
        android:textColor="@color/button_text"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/exitButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ui_btn_menu"
        android:onClick="exitOnApp"
        android:text="@string/exit_button_text"
        android:textColor="@color/button_text"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
